--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==0.10.1
 Flask-SQLAlchemy==2.1
+Flask-Testing==0.4.2
 Flask-WTF==0.12
 gunicorn==19.5.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+nose==1.3.7
 requests==2.10.0
 SQLAlchemy==1.0.12
 telepot==8.0
