--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+colorama==0.3.7
 Flask==0.10.1
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.4.2
 Flask-WTF==0.12
+funcsigs==1.0.2
+green==2.4.0
 gunicorn==19.5.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mock==2.0.0
 nose==1.3.7
+pbr==1.9.1
+python-termstyle==0.1.10
 requests==2.10.0
+six==1.10.0
 SQLAlchemy==1.0.12
 telepot==8.0
 urllib3==1.15.1
