--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ Flask-WTF==0.12
 funcsigs==1.0.2
 green==2.4.0
 gunicorn==19.5.0
+inflect==0.2.5
 itsdangerous==0.24
 Jinja2==2.8
+jinja2-pluralize==0.3.0
 MarkupSafe==0.23
 mock==2.0.0
 nose==1.3.7
