--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.23
 colorama==0.3.7
 Flask==0.10.1
 Flask-SQLAlchemy==2.1
@@ -10,11 +14,13 @@ inflect==0.2.5
 itsdangerous==0.24
 Jinja2==2.8
 jinja2-pluralize==0.3.0
+kombu==3.0.35
 MarkupSafe==0.23
 mock==2.0.0
 nose==1.3.7
 pbr==1.9.1
 python-termstyle==0.1.10
+pytz==2016.4
 requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.0.12
