--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 amqp==1.4.9
 anyjson==0.3.3
-APScheduler==3.2.0
 billiard==3.3.0.23
+blinker==1.4
 colorama==0.3.7
 Flask==0.10.1
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.4.2
 Flask-WTF==0.12
@@ -19,6 +23,7 @@ kombu==3.0.35
 MarkupSafe==0.23
 mock==2.0.0
 nose==1.3.7
+passlib==1.6.5
 pbr==1.9.1
 python-termstyle==0.1.10
 pytz==2016.4
